--- a/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -236,7 +236,7 @@ body > .navbar-collapse{
 
 
 .main-panel{
-    background: rgba(203,203,210,.15);
+    // background: rgba(203,203,210,.15);
     position: relative;
     float: right;
     width: $sidebar-width;
