firebase auth done to login success

--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -1244,3 +1244,12 @@
   object-fit: cover;
   margin-top: 72px;
 }
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.block-margin-auto {
+  display: block;
+  margin: auto;
+}
